[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uv-correction"
version = "0.1.0"
description = "GUI tool to inspect and correct UV coordinates in USD meshes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "usd-core>=25.2",
]

[project.scripts]
uv-correction = "uv_correction:main"

[tool.setuptools]
py-modules = ["uv_correction"]
